--- a/expensetracker.html
+++ b/expensetracker.html
@@ -5,7 +5,7 @@
             <input id='username' type="number" name="username"  required/>
             <label> choose description</label>
             <input id='email' type="text" name="emailId"  required/>
-            <label> choose a catagory:</label>
+            <label> type a catagory:</label>
             <input id='phonenumber' type="text" name="phonenumber" />
             <button> add expense </button>
         </form>
